# 3d_m4e

./: .gitignore  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example_mbd_system_3d.py  main.py  pyproject.toml
source/multibody_3d/: __init__.py
source/multibody_3d/multibody_core/: _velocity_transformation_helper.py  _velocity_transformation_inspector.py  joint_coordinate_3d.py  joint_system_3d.py  mbd_system_3d.py  topology_3d.py  velocity_transformation_3d.py  velocity_transformation_3d_backup.py
source/multibody_3d/tests/: test_assemble_B_symbolic.py  test_block_B.py  test_block_inspector.py  test_compile_B_lambdified.py  test_compile_B_quaternion.py  test_jax_backend.py  test_joint_coordinate.py  test_kinematics_cache_3d.py  test_kinematics_cache_symbolic.py  test_mbd_system_3d.py  test_topology.py  test_velocity_transformation_3d.py  test_velocity_transformation_3d_bdot.py
